# qfin-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: IWM_holdings.csv  lowcaptickers.csv  tickers.csv
qfin/: __init__.py  backest.py  backtest.py  costs.py  data.py  features.py  metrics.py  permutation.py  risk.py  utils.py
src/: gaka_core.cpp
tests/: equal_weight copy.py  equal_weight.py  gaka_backtest_technicals.py  marketcap-returns-analysis.py  permutation.cpp  test.py  test_backtest.py  test_features.py  test_permutation.py  test_risk.py
tests/scanner/: riskmetrics_results.csv  scanner.py  scanner_results.csv  scticker.csv
